<resources>
    <string name="app_name">Water Diary</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="active">Active</string>
    <string name="add_widget">Add widget</string>
    <string name="admob_app_id">ca-app-pub-2337353105916756~2279901954</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstitial_video_id">ca-app-pub-3940256099942544/8691691433</string>
    <string name="admob_native_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_rewarded_video_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="app_share_txt">I have been using Water Diary and I think you might like it. Check it out on your phone: #1</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="average_completion">Average Completion</string>
    <string name="average_intake">Average Intake</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="breastfeeding">Breastfeeding</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cloudy">Cloudy</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="day">day</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_ok_button">OK</string>
    <string name="drink_frequency">Drink Frequency</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="faq_a">A:</string>
    <string name="faq_answer_1">There are several reasons. You may check settings as follows:\101. Did you set reminder start &amp; end time appropriately?\102. Have you enabled Water Diary to auto-start on your phone?\103. Have you installed third-party apps like CleanMaster which may prohibit Water Diary running in the background and send notifications?\104. Have you turned off the reminder?\105. Have you set Water Diary to \"Don\'t optimize\" on your phone\'s Battery optimization settings?</string>
    <string name="faq_answer_11">You need to tap on menu and select \"Drink History\" from the list of menu options. Inside Drink History you can tap on delete icon against wrong drink log entry.</string>
    <string name="faq_answer_12">You need to tap on menu and select \"Settings\" from the list of menu options. Inside Settings, you can change weather by clicking on \"My Profile\".</string>
    <string name="faq_answer_13">You need to tap on menu and select \"Settings\" from the list of menu options. Inside Settings, you can change active / pregnant / breastfeeding status by clicking on \"My Profile\".</string>
    <string name="faq_answer_2">You need to tap on menu and select \"Settings\" from the list of menu options. Inside Settings, You can edit the drink target by clicking on \"My Profile\".</string>
    <string name="faq_answer_3">You need to tap on menu and select \"Settings\" from the list of menu options. Inside Settings, You can edit height and weight by clicking on \"My Profile\".</string>
    <string name="faq_answer_4">There are 2 ways:\101. You can click on the plus icon to add on the drink log.\102. You can also add drink log by clicking on the application widget from android\'s home screen or today\'s widget from iPhone.</string>
    <string name="faq_answer_5">You need to tap on menu and select \"Settings\" from the list of menu options. Inside Settings, backup data to your phone.</string>
    <string name="faq_answer_6">You need to tap on menu and select \"Settings\" from the list of menu options. Inside Settings, restore data from your phone.</string>
    <string name="faq_answer_7">You can click on the change container icon on the top left of the home screen, then tap on your choice of container. You can also add your customized drink.</string>
    <string name="faq_answer_8">You can click on the menu and select Drink History then view your drink history.</string>
    <string name="faq_answer_9">You can click on the menu and select Drink Report option then view using following 3 options:\101. Weekly Report\102. Monthly Report\103. Yearly Report</string>
    <string name="faq_q">Q:</string>
    <string name="faq_question_1">Why doesn\'t the Reminder work?</string>
    <string name="faq_question_11">What if I added drink log by mistake?</string>
    <string name="faq_question_12">How to change weather?</string>
    <string name="faq_question_13">How to change active / pregnant / breastfeeding status?</string>
    <string name="faq_question_2">What if the drink target recommended is not suitable for me?</string>
    <string name="faq_question_3">How to change height and weight?</string>
    <string name="faq_question_4">How to add drink water?</string>
    <string name="faq_question_5">How to backup data?</string>
    <string name="faq_question_6">How to restore data?</string>
    <string name="faq_question_7">How to add customize cups?</string>
    <string name="faq_question_8">How to check my drink water history?</string>
    <string name="faq_question_9">How to check my drink water report?</string>
    <string name="fri">Fri</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="mdtp_ampm_circle_radius_multiplier">0.22</string>
    <string name="mdtp_cancel">@android:string/cancel</string>
    <string name="mdtp_circle_radius_multiplier">0.82</string>
    <string name="mdtp_circle_radius_multiplier_24HourMode">0.85</string>
    <string name="mdtp_date_v1_monthyear">MMMM yyyy</string>
    <string name="mdtp_day_of_week_label_typeface">sans-serif-light</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">%1$s deleted</string>
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <string name="mdtp_item_is_selected">%1$s selected</string>
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <string name="mdtp_numbers_radius_multiplier_inner">0.6</string>
    <string name="mdtp_numbers_radius_multiplier_normal">0.81</string>
    <string name="mdtp_numbers_radius_multiplier_outer">0.83</string>
    <string name="mdtp_ok">@android:string/ok</string>
    <string name="mdtp_radial_numbers_typeface">sans-serif</string>
    <string name="mdtp_sans_serif">sans-serif</string>
    <string name="mdtp_second_picker_description">Seconds circular slider</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">Select hours</string>
    <string name="mdtp_select_minutes">Select minutes</string>
    <string name="mdtp_select_seconds">Select seconds</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="mdtp_selection_radius_multiplier">0.16</string>
    <string name="mdtp_text_size_multiplier_inner">0.11</string>
    <string name="mdtp_text_size_multiplier_normal">0.12</string>
    <string name="mdtp_text_size_multiplier_outer">0.08</string>
    <string name="mdtp_time_placeholder">--</string>
    <string name="mdtp_time_separator">:</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="mon">Mon</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="only_character">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="only_digit">0123456789</string>
    <string name="only_digit_character">0123456789abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="open_gps_dialog">Do you want open GPS setting?</string>
    <string name="other_factors">Other Factors</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pregnant">Pregnant</string>
    <string name="rainy">Rainy</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="sat">Sat</string>
    <string name="search_menu_title">Search</string>
    <string name="snow">Snow</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_about_us">About Us</string>
    <string name="str_achievements">Achievements</string>
    <string name="str_add_water">Add water</string>
    <string name="str_advance_settings">ADVANCED SETTINGS</string>
    <string name="str_allow">Allow</string>
    <string name="str_auto">Auto</string>
    <string name="str_auto_backup">Auto Backup</string>
    <string name="str_automatic">Automatic</string>
    <string name="str_back">Back</string>
    <string name="str_backup">Backup</string>
    <string name="str_backup_and_restore">Backup &amp; Restore</string>
    <string name="str_camera">Choose from Camera</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_cm">cm</string>
    <string name="str_daily_goal_reached">Daily goal reached!</string>
    <string name="str_english">English</string>
    <string name="str_feet">feet</string>
    <string name="str_female">Female</string>
    <string name="str_french">French</string>
    <string name="str_gallery">Choose from Gallery</string>
    <string name="str_gender">Gender</string>
    <string name="str_german">German</string>
    <string name="str_height">Height</string>
    <string name="str_hindi">Hindi</string>
    <string name="str_male">Male</string>
    <string name="str_remove_photo">Remove Photo</string>
    <string name="str_save">Save</string>
    <string name="str_share">Share</string>
    <string name="str_share_your_achievement_with_your_friends">Share your achievement with your friends!</string>
    <string name="str_spanish">Spanish</string>
    <string name="str_your_name">Your Name</string>
</resources>