<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/str_english"
        android:textSize="@dimen/dp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnFrench"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/str_french"
        android:textSize="@dimen/dp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnGerman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/str_german"
        android:textSize="@dimen/dp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSpanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/str_spanish"
        android:textSize="@dimen/dp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnHindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/str_hindi"
        android:textSize="@dimen/dp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/str_cancel"
        android:textSize="@dimen/dp_15" />
</LinearLayout>
