<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_transparant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_rounded_white_back"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_cancel"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_gravity="end"
                android:src="@drawable/ic_cancel"
                android:visibility="visible"
                app:tint="@color/cross" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/calibri_bold"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/str_height"
                android:textColor="@color/rdo_gender_select"
                android:textSize="@dimen/dp_20" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/drawable_item_selector"
                android:backgroundTint="#d5eeec"
                android:fontFamily="@font/calibri_regular"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:padding="@dimen/dp_15"
                android:textColor="@color/rdo_gender_select"
                android:textSize="@dimen/dp_20" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdo_cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rdo_back"
                    android:button="@null"
                    android:text="@string/str_cm"
                    android:textColor="@drawable/rdo_back" />

                <RadioButton
                    android:id="@+id/rdo_feet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rdo_back_2"
                    android:button="@null"
                    android:checked="true"
                    android:text="@string/str_feet"
                    android:textColor="@drawable/rdo_back_2" />
            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/drawable_button"
            android:minWidth="@dimen/dp_120">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/calibri_regular"
                android:includeFontPadding="true"
                android:text="@string/str_save"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_15" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_5"
            android:minWidth="@dimen/dp_120"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/calibri_light"
                android:includeFontPadding="true"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/str_cancel"
                android:textColor="@color/cancel_color"
                android:textSize="@dimen/dp_15" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
