<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_transparant"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/calibri_bold"
                android:gravity="center"
                android:includeFontPadding="true"
                android:text="@string/str_your_name"
                android:textColor="@color/rdo_gender_select"
                android:textSize="@dimen/dp_20" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/drawable_edittext_black_overlay"
                android:digits="@string/only_character"
                android:fontFamily="@font/calibri_light"
                android:includeFontPadding="false"
                android:inputType="textCapWords"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/rdo_gender_select"
                android:textSize="@dimen/dp_20" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/calibri_bold"
                android:gravity="center"
                android:includeFontPadding="true"
                android:text="@string/str_gender"
                android:textColor="@color/rdo_gender_select"
                android:textSize="@dimen/dp_20" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/male_block"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/rdo_gender_select"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_male"
                            android:layout_width="@dimen/dp_50"
                            android:layout_height="@dimen/dp_50"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_male_selected" />
                    </LinearLayout>
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_5"
                    android:fontFamily="@font/calibri_light"
                    android:gravity="center_horizontal"
                    android:text="@string/str_male"
                    android:textColor="@color/rdo_gender_select"
                    android:textSize="@dimen/dp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/female_block"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/rdo_gender_regular"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_female"
                            android:layout_width="@dimen/dp_50"
                            android:layout_height="@dimen/dp_50"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_female_selected" />
                    </LinearLayout>
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_5"
                    android:fontFamily="@font/calibri_light"
                    android:gravity="center_horizontal"
                    android:text="@string/str_female"
                    android:textColor="@color/rdo_gender_select"
                    android:textSize="@dimen/dp_12" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
