<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_transparant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_rounded_white_back"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_gravity="end"
            android:src="@drawable/ic_cancel"
            android:visibility="visible"
            app:tint="@color/cross" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_85"
                android:layout_height="@dimen/dp_85"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_goal_reached" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/calibri_regular"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingTop="@dimen/dp_2"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/str_daily_goal_reached"
                android:textColor="@color/daily_goal_no"
                android:textSize="@dimen/dp_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/calibri_regular"
                android:gravity="center"
                android:includeFontPadding="true"
                android:text="@string/str_share_your_achievement_with_your_friends"
                android:textColor="@color/daily_goal_no"
                android:textSize="@dimen/dp_15" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/drawable_button"
            android:minWidth="@dimen/dp_120">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/calibri_regular"
                android:includeFontPadding="true"
                android:text="@string/str_share"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_15" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
